<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="32dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.superlauncher.MainActivity">

    <TextView
        android:id="@+id/enter_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_text_enter_the_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:privateImeOptions="disableToolbar=true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:hint="@string/dialog_edittext_enter_password"
         />

    <Button
        android:id="@+id/buttonUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dialog_button_unlock_settings" />

</LinearLayout>
