<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.superlauncher.MainActivity">

    <TextView
        android:id="@+id/tvShutdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_shutdown"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvShutdown"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/buttonShutdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launcher_button_shutdown"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

</RelativeLayout>
