<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/custom_action"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background_off_white"
    android:gravity="start"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="false"
        android:background="@drawable/top_bar"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonAppaBack"
            android:layout_width="37dp"

            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="false"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/btn_back"
            android:gravity="center_vertical" />


        <include layout="@layout/titlebar"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonAppaCall"
            android:layout_width="35dp"
            android:layout_height="120dp"
            android:layout_weight="0.03"
            android:background="@drawable/white_pressed"
            android:drawableTop="@drawable/btn_main_1"
            android:paddingTop="10dp"
            android:text="@string/general_button_call"
            android:textColor="#585858"
            android:textSize="14dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.001"/>

        <Button
            android:id="@+id/ButtonAppaMessages"
            android:layout_width="35dp"
            android:layout_height="120dp"
            android:layout_weight="0.03"
            android:background="@drawable/white_pressed"
            android:drawableTop="@drawable/btn_main_2"
            android:paddingTop="10dp"
            android:text="@string/general_button_messages"
            android:textColor="#585858"
            android:textSize="14dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.001"/>

        <Button
            android:id="@+id/ButtonAppaSchedule"
            android:layout_width="35dp"
            android:layout_height="120dp"
            android:layout_weight="0.03"
            android:background="@drawable/white_pressed"
            android:drawableTop="@drawable/btn_main_3"
            android:paddingTop="10dp"
            android:text="@string/general_button_schedule"
            android:textColor="#585858"
            android:textSize="14dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.001"/>

        <Button
            android:id="@+id/ButtonAppaMapImg"
            android:layout_width="35dp"
            android:layout_height="120dp"
            android:layout_weight="0.03"
            android:background="@drawable/white_pressed"
            android:drawableTop="@drawable/btn_main_4"
            android:paddingTop="10dp"
            android:text="@string/general_button_map"
            android:textColor="#585858"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignLeft="@+id/TextViewCallSuper"
        android:layout_alignTop="@+id/TextViewCallSuper"
        android:layout_margin="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:dashWidth="10dp"
        android:dashGap="10dp"
        android:divider="@drawable/one"
        android:dividerPadding="10dp"
        android:orientation="vertical"
        android:showDividers="middle"/>

    <LinearLayout
        android:id="@+id/container_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignStart="@+id/linearLayout1"
        android:layout_alignEnd="@+id/linearLayout1"
        android:layout_marginTop="21dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/ButtonYourOfficer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/rsz_btn_call_supervisor"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/call_button_your_officer"
                android:textColor="@color/Black"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/ButtonAgencyCenter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/rsz_btn_call_supervisor"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/call_button_agency_center"
                android:textColor="@color/Black"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButtonEmergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/ButtonEmergency"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/rsz_btn_call_emergency_small"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/call_button_emergency"
                android:textColor="@color/Black"
                android:gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/TextViewCallSuper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/container1"
        android:layout_alignParentStart="true"
        android:background="@color/blue_darker"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/call_text_supervisors"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>