<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">


    <ImageView
        android:id="@+id/dialog_photo_on_demand_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        tools:src="@drawable/supercom_new" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <android.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dialog_photo_on_demand_cancel"
            android:layout_width="wrap_content"
            android:minWidth="88dp"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:background="#999999"
            android:elevation="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <android.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dialog_photo_on_demand_retry"
            android:layout_width="wrap_content"
            android:minWidth="88dp"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:background="#999999"
            android:elevation="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/retry"
            android:textColor="@color/white" />

        <android.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dialog_photo_on_demand_send"
            android:layout_width="wrap_content"
            android:minWidth="88dp"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:background="#0066ff"
            android:elevation="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/send"
            android:textColor="@color/white" />

        <android.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>