<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_round_corners_dialog"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/dialog_text_new_message"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/body_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_body_backgorund"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/body_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/ico_msg" />

        <TextView
            android:id="@+id/body_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="-5dp"
            android:layout_toEndOf="@+id/body_image"
            android:text="@string/dialog_button_from_officer"
            android:textColor="@color/dialog_body_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_below="@+id/body_title_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/body_image"
            android:layout_height="80dp">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/body_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Zone B"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/swipeToAck_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_rounded_corners_dialog"
        android:visibility="gone">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:progressDrawable="@drawable/seekbar_progess"
            android:thumb="@drawable/btn_msg_acknowledge_68px" />

        <TextView
            android:id="@+id/seekbar_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="20dp"
            android:text="@string/custom_dialog_swipe_to_acknowledge_message"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_rounded_corners_dialog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/bCancel"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/base_dialog_button"
                android:text="@string/dialog_unallocate_btn_cancel"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp" />

            <Button
                android:id="@+id/bOk"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/base_dialog_button"
                android:text="@string/btn_ok"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>